Move library relocation back into graalpython to be dynamic